# AetherFlow

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  seed.sql  start_agents.sh  stop_agents.sh  tailwind.config.js
.agent/rules/: rust-axum.md  rust-tokio.md
agents/translator/: app.js  app.ts  package-lock.json  package.json  server.js  server.ts  tsconfig.json
agents/translator/controllers/: sentimentController.ts  summarizeController.js  summarizeController.ts  translateController.js  (+1 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Sidebar.tsx
src/crates/core/: Cargo.toml
src/crates/core/src/: director.rs  lib.rs  messages.rs  process_manager.rs  runtime.rs  types.rs  worker.rs
src/crates/core/tests/: integration_tests.rs
src/crates/server/: Cargo.toml
src/crates/server/migrations/: 20260223_init.sql  20260225160000_add_runtime.sql  20260225162500_add_workdir.sql  20260225170000_adapt_agent_model.sql  20260226200000_add_source.sql  20260226205000_create_agent_logs.sql  20260226235000_create_flows.sql  20260227195000_create_agent_tasks.sql
src/crates/server/src/: handlers.rs  integrations.rs  main.rs  models.rs  repositories.rs  routes.rs  services.rs  state.rs
src/crates/server/src/handlers/: agent.rs  agent_handler.rs  agent_task.rs  flow.rs  flow_payloads.rs  gateway.rs  ws.rs
src/crates/server/src/models/: agent.rs  agent_log.rs  agent_task.rs  flow.rs  flow_execution.rs  flow_step.rs
src/crates/server/src/repositories/: agent.rs  agent_log.rs  agent_repository.rs  agent_task.rs  flow.rs  flow_execution.rs  flow_step.rs  mod.rs
src/crates/server/src/routes/: agent.rs  agent_routes.rs  agent_task.rs  flow.rs  mod.rs
src/crates/server/src/services/: agent.rs  agent_client.rs  agent_log.rs  agent_service.rs  agent_task.rs  flow.rs  flow_executor.rs  monitor.rs
web/: astro.config.mjs  package-lock.json  package.json  test.js  test_db.js
(+21 files in other folders)
