# Defined comments: Dependencies for the execution engine and internal logic

[package]
name = "aether-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime for process management
tokio = { version = "1.0", features = ["full"] }

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
