[package]
name = "aether-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal crate connection
aether-core = { path = "../core" }

# Web framework and networking
axum = "0.8.8"
tokio = { version = "1.48", features = ["full"] }

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database drivers
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
sea-orm = { version = "1.1.0", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "macros",
] }
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Documentation
# Documentation
utoipa = "5.4"
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
reqwest = { version = "0.13.2", features = ["json"] }
